# trellis

./: .env.example  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/src/backend/: config.py  main.py
backend/src/backend/api/v1/: auth.py  billing.py
backend/src/backend/db/: session.py
backend/src/backend/models/: invite.py  user.py
backend/src/backend/schemas/: user.py
backend/src/backend/services/: auth_service.py  oauth_service.py  stripe_service.py
backend/src/backend/tests/: test_invites.py  test_orgs.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/billing/: page.tsx
frontend/app/(dashboard)/members/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/components/: avatar.tsx
frontend/contexts/: auth.tsx  org.tsx
frontend/lib/: api.ts  auth.tsx
frontend/types/: Auth.ts  Invites.ts  Orgs.ts
