[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrià Gomis", email = "gomisroca@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
[tool.fastapi]
entrypoint = "backend.main:app"

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
